--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@supabase/auth-helpers-sveltekit": "^0.8.6",
 		"sass": "^1.56.1",
 		"stripe": "^11.3.0"
 	}
